[gd_scene load_steps=11 format=3 uid="uid://b60885sjfo4rx"]

[ext_resource type="Script" uid="uid://dpoqvy1as0y1c" path="res://drone.gd" id="1_puw62"]
[ext_resource type="Texture2D" uid="uid://cbuaotppc1l85" path="res://pics/drone_idle.png" id="2_30i2v"]
[ext_resource type="Texture2D" uid="uid://c42hiv14qeuvx" path="res://pics/drone_scan.png" id="3_ardpj"]

[sub_resource type="Animation" id="Animation_30i2v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("scanner:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_puw62"]
resource_name = "always"
length = 0.25
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2bwtr"]
_data = {
&"RESET": SubResource("Animation_30i2v"),
&"always": SubResource("Animation_puw62")
}

[sub_resource type="Animation" id="Animation_6d57s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("scanner:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2bwtr"]
resource_name = "scanning"
length = 6.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("scanner:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8000001, 2, 2.2, 2.4, 2.6000001, 2.8, 3, 3.2, 3.4, 3.6000001, 3.8, 4, 4.2000003, 4.4, 4.6, 4.8, 5, 5.2000003, 5.4, 5.6, 5.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 0]
}

[sub_resource type="Animation" id="Animation_ardpj"]
resource_name = "stopping"
step = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4qt7m"]
_data = {
&"RESET": SubResource("Animation_6d57s"),
&"scanning": SubResource("Animation_2bwtr"),
&"stopping": SubResource("Animation_ardpj")
}

[node name="drone" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_puw62")

[node name="body_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2bwtr")
}

[node name="body" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_30i2v")
offset = Vector2(8, 8)
hframes = 6

[node name="scanner" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -10)
texture = ExtResource("3_ardpj")
offset = Vector2(8, 8)
hframes = 29

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4qt7m")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.800000000000001

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
